[gd_scene load_steps=30 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://soldier.gd" type="Script" id=2]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_6.png" type="Texture" id=3]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_9.png" type="Texture" id=4]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_2.png" type="Texture" id=5]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_13.png" type="Texture" id=6]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_17.png" type="Texture" id=7]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_18.png" type="Texture" id=8]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_11.png" type="Texture" id=9]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_19.png" type="Texture" id=10]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_16.png" type="Texture" id=11]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_12.png" type="Texture" id=12]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_1.png" type="Texture" id=13]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_4.png" type="Texture" id=14]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_3.png" type="Texture" id=15]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_7.png" type="Texture" id=16]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_8.png" type="Texture" id=17]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_10.png" type="Texture" id=18]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_14.png" type="Texture" id=19]
[ext_resource path="res://GFX/Top_Down_Survivor/rifle/move/survivor-move_rifle_5.png" type="Texture" id=20]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9919, 33.2229 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 40.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "lookAround"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.9, 2.5, 2.7, 3, 3.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -50.0, -50.0, 0.0, 60.5, 60.0, 10.0, -25.8503, -25.8503, 0.910674, 25.0, 26.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "none"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 3377.76

[sub_resource type="CircleShape2D" id=4]
radius = 1646.57

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -38.6963, 30.3443, -48.473, 20.5676, -42.8863, 4.5058, -47.0764, -4.57257, -46.378, -16.4443, -19.8412, -29.0144, -7.96948, -20.6343, 1.10889, -10.8576, 23.4557, -3.87424, 30.4391, 15.6792, 52.7858, 15.6792, 52.0875, 28.2493, 5.29892, 28.2493 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 21 )

[node name="soldier" type="KinematicBody2D" groups=[
"shootable",
"soldier",
]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="body" type="Node2D" parent="."]

[node name="shootSpot" type="Node2D" parent="body"]
position = Vector2( 55.2902, 21.8996 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="body"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="body"]
anims/lookAround = SubResource( 7 )
anims/none = SubResource( 8 )

[node name="eyes" type="Node2D" parent="."]

[node name="enemyDetect" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetect"]
position = Vector2( -1.10803, 0 )
shape = SubResource( 3 )

[node name="shootCoolDown" type="Timer" parent="."]
one_shot = true

[node name="giveUp" type="Timer" parent="."]
one_shot = true

[node name="coverDetect" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="coverDetect"]
shape = SubResource( 4 )

[node name="peekTime" type="Timer" parent="."]
one_shot = true

[node name="peekCoolDown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -111.067 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="coverToAttack" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -40.0
margin_top = -80.0
margin_right = 145.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 6 )
text = "w"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="enemyDetect" to="." method="_on_enemyDetect_body_entered"]
[connection signal="body_exited" from="enemyDetect" to="." method="_on_enemyDetect_body_exited"]
[connection signal="timeout" from="shootCoolDown" to="." method="_on_shootCoolDown_timeout"]
[connection signal="timeout" from="giveUp" to="." method="_on_giveUp_timeout"]
[connection signal="timeout" from="peekTime" to="." method="_on_peekTime_timeout"]
[connection signal="timeout" from="peekCoolDown" to="." method="_on_peekCoolDown_timeout"]
[connection signal="timeout" from="coverToAttack" to="." method="_on_coverToAttack_timeout"]
